07_retirement/grade.txt
Grading at Tue Jun 30 13:50:30 UTC 2020
Attempting to compile retirement.c
retirement.c:18:16: error: parameter 3 (‘working’) has incomplete type
    retire_info working, retire_info retired) {
                ^
retirement.c:18:37: error: parameter 4 (‘retired’) has incomplete type
    retire_info working, retire_info retired) {
                                     ^
retirement.c: In function ‘main’:
retirement.c:41:15: error: storage size of ‘retired’ isn’t known
   retire_info retired;
               ^
retirement.c:42:15: error: storage size of ‘working’ isn’t known
   retire_info working;
               ^
retirement.c:42:15: error: unused variable ‘working’ [-Werror=unused-variable]
retirement.c:41:15: error: unused variable ‘retired’ [-Werror=unused-variable]
   retire_info retired;
               ^
cc1: all warnings being treated as errors
The code did not compile!

Overall Grade: F
